[tool.poetry]
name = "onedm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"
joblib = "^1.5.0"
einops = "^0.8.1"
easydict = "^1.13"
lmdb = "^1.6.2"
opencv-python = "^4.11.0.86"
torch = "^2.7.0"
torchvision = "^0.22.0"
torchaudio = "^2.7.0"
diffusers = "^0.33.1"
jupyter = "^1.1.1"
notebook = "^7.4.2"
jupyterlab = "^4.4.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
beautifulsoup4 = "^4.13.4"
bleach = "^6.2.0"
html5lib = "^1.1"
markdown = "^3.8"
aiofiles = "^24.1.0"
aiosqlite = "^0.21.0"
anyio = "^4.9.0"
argon2-cffi = "^23.1.0"
attrs = "^25.3.0"
certifi = "^2025.4.26"
charset-normalizer = "^3.4.2"
cryptography = "^44.0.3"
cycler = "^0.12.1"
debugpy = "^1.8.14"
decorator = "^5.2.1"
defusedxml = "^0.7.1"
entrypoints = "^0.4"
fonttools = "^4.57.0"
idna = "^3.10"
importlib-metadata = "^8.7.0"
importlib-resources = "^6.5.2"
jedi = "^0.19.2"
jinja2 = "^3.1.6"
json5 = "^0.12.0"
jsonschema = "^4.23.0"
kiwisolver = "^1.4.8"
markupsafe = "^3.0.2"
mistune = "^3.1.3"
nbclient = "^0.10.2"
nbconvert = "^7.16.6"
nbformat = "^5.10.4"
nest-asyncio = "^1.6.0"
packaging = "^25.0"
pandocfilters = "^1.5.1"
parso = "^0.8.4"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
pillow = "^11.2.1"
pip = "^25.1.1"
platformdirs = "^4.3.7"
pooch = "^1.8.2"
prometheus-client = "^0.21.1"
prompt-toolkit = "^3.0.51"
psutil = "^7.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pyyaml = "^6.0.2"
pyzmq = "^26.4.0"
qtconsole = "^5.6.1"
qtpy = "^2.4.3"
requests = "^2.32.3"
send2trash = "^1.8.3"
setuptools = "^80.3.1"
six = "^1.17.0"
soupsieve = "^2.7"
stack-data = "^0.6.3"
terminado = "^0.18.1"
threadpoolctl = "^3.6.0"
tinycss2 = "^1.4.0"
toml = "^0.10.2"
tornado = "^6.4.2"
traitlets = "^5.14.3"
typing-extensions = "^4.13.2"
urllib3 = "^2.4.0"
wcwidth = "^0.2.13"
webencodings = "^0.5.1"
websocket-client = "^1.8.0"
widgetsnbextension = "^4.0.14"
zipp = "^3.21.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
